--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.8.7",
-    "@svgr/webpack": "^5.2.0",
-    "antd": "^4.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@svgr/webpack": "^5.3.0",
+    "antd": "^4.0.4",
+    "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.1",
+    "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
-    "file-loader": "^5.1.0",
+    "file-loader": "^6.0.0",
     "flyio": "^0.6.14",
-    "fs-extra": "^8.1.0",
-    "html-webpack-plugin": "^4.0.0-beta.11",
+    "fs-extra": "^9.0.0",
+    "html-webpack-plugin": "^4.0.1",
     "identity-obj-proxy": "^3.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -28,10 +28,10 @@
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.2",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
-    "react-dev-utils": "^10.2.0",
-    "react-dom": "^16.13.0",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "resolve": "^1.15.1",
@@ -40,11 +40,11 @@
     "semver": "^7.1.3",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.42.0",
+    "url-loader": "^4.0.0",
+    "webpack": "^4.42.1",
     "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
-    "workbox-webpack-plugin": "^5.0.0"
+    "workbox-webpack-plugin": "^5.1.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
