--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@svgr/webpack": "^5.3.1",
-    "antd": "^4.1.3",
+    "antd": "^4.1.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.6",
@@ -34,17 +34,15 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "resolve": "^1.15.1",
+    "resolve": "^1.16.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
     "semver": "^7.3.2",
-    "style-loader": "^1.1.3",
+    "style-loader": "^1.1.4",
     "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-manifest-plugin": "^2.2.0",
-    "workbox-webpack-plugin": "^5.1.2"
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
